# final-project

./: graficagrid.cpp  pandemic.cpp  readme  sir.hpp  siroflife.cpp
esame20luglio/: progetto_programmazione (4).pdf:Zone.Identifier
esame20luglio/grid_base/: doctest.h  grid.test.cpp  main.cpp  parser.cpp  parser.hpp  termcolor.hpp  useful_func.hpp  world.cpp  world.hpp
esame20luglio/grid_base/source/: CMakeLists.txt  a.out  grid.test.cpp  main.cpp  parser.cpp  world.cpp  world.hpp
esame20luglio/sir_base/: a.out  main.cpp  main.ii  main.s  parser.cpp  parser.hpp  sir.cpp  sir.hpp  sir.ii  sir.s  sir.test.cpp  useful_func.hpp
esame20luglio/sir_grid/: a.out  grid_test.cpp  main.cpp  parser.cpp  parser.hpp  print.cpp  siroflife.hpp  sum.cpp  termcolor.hpp  test.cpp  test.hpp  useful_func.hpp
esame20luglio/sir_yae/: a.out  decisions.hpp  events.cpp  game_2.cpp  game_main.cpp  interface.hpp  presets.hpp  yae.hpp
esame20lugliosfml/grid_base/: grid.test.cpp  parser.hpp  world.cpp
esame9settembre/: modifche_consegna_progetto_precedente.pdf:Zone.Identifier
gioco/: a.out  decisions.hpp  decisions_tests.cpp  events.hpp  game_main.cpp  gioco.cpp  gioco.hpp  interface.hpp  more_tests.cpp  presets.hpp  test.cpp  useful_func.hpp
grid/: doctest.h.gch  sir.grid.test.cpp  sir_grid.hpp
more_tu/sir_yae/: CMakeLists.txt  a.out  decisions.cpp  interface.hpp  yae.cpp  yae.hpp
progetto_finale/: a.out  exp2.cpp
sir_base/: main_sfml.cpp  sir.cpp  sir.hpp  sir.test.cpp  useful_func.hpp
siroflife/: grid_test.cpp  print.cpp  siroflife.cpp  siroflife.hpp  useful_func.hpp
(+78 files in other folders)
